<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/displayLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_gravity="center_horizontal"
    android:clickable="true"
    android:focusable="true">

    <TextView
        android:id="@+id/displayName"
        android:layout_width="0dp"
        android:layout_weight="0.33"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="5dp"
        android:layout_gravity="center"
        android:textSize="19sp"
        android:textAlignment="center"
        android:paddingLeft="3dp" />

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"/>

    <TextView
        android:id="@+id/displayGenre"
        android:layout_width="0dp"
        android:layout_weight="0.33"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="5dp"
        android:layout_gravity="center"
        android:textSize="19sp"
        android:textAlignment="center" />

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"/>

    <TextView
        android:id="@+id/displayStatus"
        android:layout_width="0dp"
        android:layout_weight="0.33"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="5dp"
        android:layout_gravity="center"
        android:textSize="19sp"
        android:textAlignment="center" />

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"/>

    <ImageButton
        android:id="@+id/favoriteItem"
        android:paddingTop="7dp"
        android:paddingRight="3dp"
        android:layout_weight="0.01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/unfilled_star"
        android:tag ="false"
        android:background="@android:color/transparent" />
</LinearLayout>