<resources>
    <string name="app_name">CS-321_Team-Project</string>
    <string name="add_item_button">add item button</string>
    <string name="name">Name</string>
    <string name="nameAscending">Name ↑</string>
    <string name="nameDescending">Name ↓</string>
    <string name="genre">Genre</string>
    <string name="genreAscending">Genre ↑</string>
    <string name="genreDescending">Genre ↓</string>
    <string name="status">Status</string>
    <string name="statusAscending">Status ↑</string>
    <string name="statusDescending">Status ↓</string>
</resources>